k8s/smarthome/home-assistant/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-svc
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  ports:
    - port: 2137
      name: http
      protocol: TCP
      targetPort: 2137
    - port: 8123
      name: http-hassio
      protocol: TCP
      targetPort: 8123
  selector:
    app: homeassistant
  type: ClusterIP
